--- a/views/pages/about.ejs
+++ b/views/pages/about.ejs
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Hello world</h2>
+    <h2>This is about <%= name %></h2>
   </body>
 </html>
